--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,7 +1,51 @@
 @charset "UTF-8";
 
+:root {
+    --cor-1: #49a09d;
+    --cor2: #5f2c82;
+}
+
 * {
     margin: 0px;
     padding: 0px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box;
 }
 
+body, html {
+    background-color: var(--cor2);
+    height: 100vh;
+    width: 100vw;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.630);
+}
+
+section#login >div#imagem {
+    display: block;
+    background: var(--cor2) url('../imagens/building.jpg') no-repeat;
+    background-size: cover;
+    background-position: left;
+    height: 200px;
+}
+
+section#login > div#formulario {
+    display: block;
+    padding: 10px;
+}
