--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -26,7 +26,6 @@
         float: left;
         width: 30%;
         height: 100%;
-        background-position: left;
     }
 
     section#login > div#formulario {
@@ -46,14 +45,22 @@
     }
 
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login > div#formulario {
-        float: right;
+        float: left;
         width: 50%;
+    }
+
+    div#formulario > h1 {        
+        font-size: 2em;
+    }
+
+    div#formulario > p {
+        font-size: 1.2em;
     }
     
 }
