--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,6 +3,7 @@
 :root {
     --cor-1: #49a09d;
     --cor2: #5f2c82;
+    --cor-botao-hover: #2d6462;
 }
 
 * {
@@ -28,18 +29,19 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.630);
     transition: width 0.3s, heigth 0.3s;
     transition-timing-function: ease;
+    transform: translate(-50%, -50%);
+
 }
 
-section#login >div#imagem {
+section#login > div#imagem {
     display: block;
     background: var(--cor2) url('../imagens/building.jpg') no-repeat;
     background-size: cover;
@@ -58,5 +60,84 @@ div#formulario > h1 {
 }
 
 div#formulario > p {
+    font-size: 0.8em;
+    margin: 12px 0px;
+}
+
+form > div.campo {
+    background-color: var(--cor2);
+    border: 2px solid var(--cor2);
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 8px;
+    margin: 5px 0px;
+}
+
+div.campo > label {
+    display: none;
+}
+
+div.campo > span {
+    color: white;
+    /*background-color: black;*/
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: #75dad6;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-12px);
+
+}
+
+div.campo > input:focus-within {
+    background-color: white;
+} 
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: var(--cor-1);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;    
+}
+
+form > input[type=submit]:hover {
+    background-color: var(--cor-botao-hover);
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 7px;
+    margin-top: 5px;
+    background-color: white;
+    color: #2d6462;
+    border: 1px solid #49a09d;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+form > a.botao:hover {
+    background-color: var(--cor-1);
+    color: white;
+}
+
+form > a.botao > span {
     font-size: 0.8em;
 }
